Prevent horizontal overflow

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,6 +7,7 @@ html {
 body {
     background-color: #050000;
     height: 100%;
+    overflow-x: hidden;
 }
 
 li a {
